--- a/package.json
+++ b/package.json
@@ -15,33 +15,44 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@unocss/reset": "^0.57.3",
+    "@vueuse/core": "^10.6.1",
     "pinia": "^2.1.7",
     "reset-css": "^5.0.2",
-    "vue": "^3.3.4",
+    "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.142",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
-    "@types/jsdom": "^21.1.3",
+    "@types/jsdom": "^21.1.5",
     "@types/node": "^18.18.5",
-    "@vitejs/plugin-vue": "^4.4.0",
+    "@unocss/preset-icons": "^0.57.3",
+    "@unocss/preset-uno": "^0.57.3",
+    "@vitejs/plugin-vue": "^4.4.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.1",
+    "@vue/test-utils": "^2.4.2",
     "@vue/tsconfig": "^0.4.0",
-    "cypress": "^13.3.1",
-    "eslint": "^8.49.0",
+    "cypress": "^13.5.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "sass": "^1.69.5",
-    "start-server-and-test": "^2.0.1",
+    "start-server-and-test": "^2.0.2",
     "typescript": "~5.2.0",
+    "unocss": "^0.57.3",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
+    "unplugin-vue-router": "^0.7.0",
     "vite": "^4.4.11",
+    "vite-plugin-pwa": "^0.16.7",
+    "vite-plugin-vue-layouts": "^0.8.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.19"
   }
